objects/Campaign_Cost__c.object
<CustomObject>
    <label>Campaign Cost</label>
    <nameField>
        <label>Campaign Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Item__c</fullName>
        <label>Campaign Item</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Costs</relationshipLabel>
        <relationshipName>R00N30000000rzvsEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entered in Gelco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>